[project]
name = "flood-emergency-agent"
version = "0.1.0"
description = "GIS-centered flood forecasting and emergency response agent"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "oag",
    "torch>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
oag = { path = "agent", editable = true }
